...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/discover_supporting"
        android:textAppearance="@style/TextAppearance.CookPin.Meta" />

    <EditText
        android:id="@+id/recipeSearch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/bg_search"
        android:hint="@string/search_recipes"
        android:imeOptions="actionSearch"
...
